# X13

./: .gitattributes  Cargo.toml  README.md  V13.py  words.ron
assets/: pts.ron
assets/grammar/: cases.ron
assets/letters/: letters.ron
src/: about.rs  grammar.rs  letters.rs  main.rs  vocabulary.rs
